<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EarthSatImg">

  <LinearLayout
      android:id="@+id/user_input_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/recyclerView"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:orientation="vertical">

    <EditText
        android:id="@+id/lon_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_longitude"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/lat_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_latitude"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/sat_img_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_a_date"
        android:inputType="date"/>

    <Button
        android:id="@+id/search_img_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

  </LinearLayout>


  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/user_input_layout"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>